--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -2,7 +2,7 @@
     position: sticky;
     top: 0;
     background-color: var(--color-preto);
-    border-bottom: 0.1rem, solid var(--linha); 
+    border-bottom: 0.1rem solid var(--linha); 
 }
 
 .navbar{
